--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -54,6 +54,34 @@
     font-style: normal;
 }
 
+[class^="holberton_school-icon-"],
+[class*=" holberton_school-icon-"] {
+    font-family: 'holberton_school-icon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.holberton_school-icon-ic_sound:before {
+    content: "\e90e";
+}
+
+.holberton_school-icon-ic_video:before {
+    content: "\e910";
+}
+
+.holberton_school-icon-ic_music:before {
+    content: "\e90d";
+}
+
+.holberton_school-icon-ic_hearing:before {
+    content: "\e909";
+}
+
 /* Global styles */
 body {
     font-family: var(--font-family);
@@ -184,6 +212,49 @@ body {
     line-height: 1.6;
 }
 
+/* What we do section styles */
+.what-we-do {
+    text-align: center;
+    padding: 80px 0;
+}
+
+.section-title {
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.section-description {
+    max-width: 637px;
+    margin: 0 auto 60px;
+}
+
+.services {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.service-item {
+    flex-basis: 200px;
+    margin-bottom: 40px;
+}
+
+.service-item span {
+    font-size: 100px;
+    color: var(--color-primary);
+}
+
+.service-item h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 20px 0;
+}
+
+.service-item p {
+    font-size: 14px;
+}
+
 /* Responsive design */
 @media screen and (max-width: 480px) {
     .header-container {
@@ -246,5 +317,14 @@ body {
 
     .hero h2 {
         font-size: 14px;
+    }
+
+    .services {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .service-item {
+        flex-basis: 100%;
     }
 }
